<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mealReminderDetail"
            type="studio.alphared.tableforone.objects.reminder.MealReminder" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mealReminderDetailLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MealReminderDetailFragment">

        <Button
            android:id="@+id/backReminderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/back_button"
            app:layout_constraintBottom_toBottomOf="@+id/mealReminderScrollView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/mealReminderScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/mealReminderDetailTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_default"
                    android:text="@{mealReminderDetail.mealName}"
                    android:textSize="@dimen/title_size_default"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/mealReminderDetailImg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_default"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/meal_img_description"
                    app:imageUrl="@{mealReminderDetail.strMealThumb}"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/mealReminderDetailTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_default"
                    android:textSize="@dimen/section_size"
                    app:mealReminderDateTime="@{mealReminderDetail}" />

                <TextView
                    android:id="@+id/mealReminderDetailIngredientsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_default"
                    android:text="@string/ingredients_title" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/mealReminderIngredients"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:nestedScrollingEnabled="false"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/mealReminderDetailInstructionsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_default"
                    android:text="@string/instructions_title" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/mealReminderInstructions"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:nestedScrollingEnabled="false"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">

                    </androidx.recyclerview.widget.RecyclerView>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/bufferLayout"
                    android:layout_width="match_parent"
                    android:layout_height="150dp">

                </RelativeLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>