<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mealRecipe"
            type="studio.alphared.tableforone.objects.recipe.MealRecipe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mealRecipeDetailLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.mealrecipedetail.MealRecipeDetailFragment">

        <ProgressBar
            android:id="@+id/loadingRecipeDetailProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/recipeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/scrollViewMealRecipe"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/mealRecipeTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_default"
                        android:layout_marginTop="@dimen/margin_default"
                        android:layout_marginEnd="@dimen/margin_default"
                        android:text="@{mealRecipe.strMeal}"
                        android:textSize="@dimen/title_size_default"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/mealRecipeImg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_default"
                        android:layout_marginTop="@dimen/margin_default"
                        android:layout_marginEnd="@dimen/margin_default"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/meal_img_description"
                        app:imageUrl="@{mealRecipe.strMealThumb}"
                        tools:src="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/mealRecipeArea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_default"
                        android:text="@{mealRecipe.strArea}"
                        android:textSize="@dimen/section_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/mealRecipeIngredientsTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_default"
                        android:layout_marginEnd="@dimen/margin_default"
                        android:text="@string/ingredients_title"
                        android:textSize="@dimen/section_size"
                        android:textStyle="bold" />


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/ingredientsRecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:nestedScrollingEnabled="true"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/mealRecipeInstructionsTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_default"
                        android:text="@string/instructions_title"
                        android:textSize="@dimen/section_size"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/instructionRecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:nestedScrollingEnabled="true"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
                    </RelativeLayout>

                    <Button
                        android:id="@+id/saveRecipeButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/margin_default"
                        android:text="@string/save_button_text" />

                    <RelativeLayout
                        android:id="@+id/bufferLayout"
                        android:layout_width="match_parent"
                        android:layout_height="150dp">

                    </RelativeLayout>

                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>